# Event-Feed

./: .env.example  .gitignore  README.md
backend/: .flake8  pyproject.toml
backend/event_feed/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/event_feed/form/: user_achievement.py
backend/event_feed/management/commands/: seed.py
backend/event_feed/migrations/: 0001_initial.py
backend/event_feed/service/: get_event_feed.py
backend/event_feed/tests/: factories.py
backend/event_feed/tests/views/: test_event_feed.py  test_event_feed_order.py
backend/general/: admin.py
backend/general/migrations/: 0001_initial.py
backend/main/: settings.py  urls.py
